--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Harsh Singhal</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.typekit.net/vbp2xda.css" />
+    <link rel="stylesheet" href="style/style.css" />
+</head>
+
 <body>
-<p>Start of an era.</p>
-<h1>Update</h1>
+    <div class="container" style="background-color: lightgrey">
+        <div>
+            <h1>Portfolio of Harsh Singhal</h1>
+            <p>Description.</p>
+        </div>
+    </div>
 </body>
+
 </html>
