--- a/index.html
+++ b/index.html
@@ -4,19 +4,80 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Harsh Singhal</title>
+    <title>harsh.work \(^o^)/</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.typekit.net/vbp2xda.css" />
     <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body>
-    <div class="container" style="background-color: lightgrey">
-        <div>
-            <h1>Portfolio of Harsh Singhal</h1>
-            <p>Description.</p>
+<body style="background-color: #121213">
+    <div class="container">
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row p-0">
+            <div class="col-6 p-0 pl-2">
+                <h1 class="mt-1">Harsh Singhal</h1>
+            </div>
+            <div class="col-6">
+                <div class="row p-0">
+                    <div class="col"></div>
+                    <div class="col-auto nav mr-4">UX</div>
+                    <div class="col-auto nav mr-4">VFX</div>
+                    <div class="col-auto nav mr-4">ART</div>
+                    <div class="col-auto nav">CONNECT</div>
+                </div>
+            </div>
+            </hr>
         </div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row">
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+            <div class="tile col-2">
+                <div class="square"></div>
+            </div>
+        </div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider nav">A REAL UNICORN</div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
     </div>
 </body>
 
