--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body style="background-color: #121213">
+<body style="background-color: #f5f5f5">
     <div class="container">
         <div class="row divider"></div>
         <div class="row divider"></div>
@@ -21,6 +21,7 @@
                 <h1 class="mt-1">Harsh Singhal</h1>
             </div>
             <div class="col-6">
+                <!-- <div class="row" style="height:50%"></div> -->
                 <div class="row p-0">
                     <div class="col"></div>
                     <div class="col-auto nav mr-4">UX</div>
@@ -75,7 +76,7 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
-        <div class="row divider nav">A REAL UNICORN</div>
+        <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row divider"></div>
     </div>
