--- a/comfortable.html
+++ b/comfortable.html
@@ -33,49 +33,9 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
-        <div class="row">
-            <div class="tile col-2">
-                <a href="comfortable.html">
-                    <div class="square"></div>
-                </a>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
+        <div class="row divider pl-2 pt-1">
+            <h1>Comfortable</h1>
         </div>
-        <div class="row">
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-        </div>
-        <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row divider nav">Programmed in Christian HTML</div>
         <div class="row divider"></div>
