--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row divider"></div>
         <div class="row p-0">
             <div class="col-6 p-0 pl-2 pt-1">
-                <h1><a href="index">Harsh Singhal</a></h1>
+                <h1><a href="index.html">Harsh Singhal</a></h1>
             </div>
             <div class="col-6">
                 <div class="row p-0">
@@ -35,7 +35,7 @@
         <div class="row divider"></div>
         <div class="row">
             <div class="tile col-2">
-                <a href="comfortable">
+                <a href="comfortable.html">
                     <div class="square"></div>
                 </a>
             </div>
