added project thumbs, more updates

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row divider"></div>
         <div class="row p-0">
             <div class="col-6 p-0 pl-2 pt-1">
-                <h1><a href="index.html">Harsh Singhal</a></h1>
+                <h1 class="home"><a href="index.html">Harsh Singhal</a></h1>
             </div>
             <div class="col-6">
                 <div class="row p-0">
@@ -33,51 +33,46 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
         <div class="row">
             <div class="tile col-2">
                 <a href="comfortable.html">
-                    <div class="square"></div>
+                    <div class="square thumb comfortable">
+                        <span class="square_desc">Forts for Children of Divorce</span>
+                    </div>
                 </a>
             </div>
             <div class="tile col-2">
-                <div class="square"></div>
+                <div class="square thumb gh0st">
+                    <span class="square_desc">Advanced Security, Intuitive UI</span>
+                </div>
             </div>
             <div class="tile col-2">
-                <div class="square"></div>
+                <div class="square thumb padblock">
+                    <span class="square_desc">For the Future Home Buyers</span>
+                </div>
             </div>
             <div class="tile col-2">
-                <div class="square"></div>
+                <div class="square thumb pair"></div>
             </div>
             <div class="tile col-2">
-                <div class="square"></div>
+                <div class="square thumb grabngo"></div>
             </div>
             <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
-            </div>
-            <div class="tile col-2">
-                <div class="square"></div>
+                <div class="square thumb vibes"></div>
             </div>
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
-        <div class="row divider nav">Programmed in Christian HTML</div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider">
+            <div class="col"></div>
+            <div class="col nav">Programmed using Christian HTML</div>
+            <div class="col"></div>
+        </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
     </div>
