--- a/comfortable.html
+++ b/comfortable.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body style="background-color: #121213">
+<body>
     <div class="container">
         <div class="row divider"></div>
         <div class="row divider"></div>
