--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css" />
 </head>
 
-<body style="background-color: #121213">
+<body>
     <div class="container">
         <div class="row divider"></div>
         <div class="row divider"></div>
@@ -21,9 +21,9 @@
                 <h1 class="home"><a href="index.html">Harsh Singhal</a></h1>
             </div>
             <div class="col-6">
-                <div class="row p-0">
+                <div class="row p-0 mt-3">
                     <div class="col"></div>
-                    <div class="col-auto nav mr-4">UX</div>
+                    <div class="col-auto nav nav_selected mr-4">UX</div>
                     <div class="col-auto nav mr-4">VFX</div>
                     <div class="col-auto nav mr-4">ART</div>
                     <div class="col-auto nav">CONNECT</div>
