--- a/comfortable.html
+++ b/comfortable.html
@@ -23,7 +23,7 @@
             <div class="col-6">
                 <div class="row p-0">
                     <div class="col"></div>
-                    <div class="col-auto nav mr-4">UX</div>
+                    <div class="col-auto nav nav_selected mr-4">UX</div>
                     <div class="col-auto nav mr-4">VFX</div>
                     <div class="col-auto nav mr-4">ART</div>
                     <div class="col-auto nav">CONNECT</div>
@@ -33,12 +33,68 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
-        <div class="row divider pl-2 pt-1">
-            <h1 class="title">Comfortable</h1>
+        <div class="row divider"></div>
+        <div class="row divider">
+            <h2 class="col title">Comfortable</h2>
         </div>
         <div class="row divider"></div>
-        <div class="row divider nav">Programmed in Christian HTML</div>
         <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row">
+            <div class="tile col-2">
+                <a href="comfortable.html">
+                    <div class="square thumb comfortable">
+                        <span class="square_desc">Forts for Children of Divorce</span>
+                    </div>
+                </a>
+            </div>
+            <div class="tile col-2">
+                <div class="square thumb gh0st">
+                    <span class="square_desc">Advanced Security, Intuitive UI</span>
+                </div>
+            </div>
+            <div class="tile col-2">
+                <div class="square thumb padblock">
+                    <span class="square_desc">For the Future Home Buyers</span>
+                </div>
+            </div>
+            <div class="tile col-2">
+                <div class="square thumb pair">
+                    <span class="square_desc">Babysitting for Elderly</span>
+                </div>
+            </div>
+            <div class="tile col-2">
+                <div class="square thumb grabngo">
+                    <span class="square_desc">College Food Delivery</span>
+                </div>
+            </div>
+            <div class="tile col-2">
+                <div class="square thumb vibes">
+                    <span class="square_desc">Money Management for Millennials</span>
+                </div>
+            </div>
+        </div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider"></div>
+        <div class="row divider">
+            <div class="col" style="text-align: center">
+                <h4 class="nav">Programmed using Christian HTML</h4>
+            </div>
+        </div>
+        <div class="row divider">
+            <!-- <div class="col" style="text-align: center">
+                <h4 class="nav" style="font-size: 12px; font-weight: 400;">© 2020 - Work of Harshit Singhal</h4>
+            </div> -->
+        </div>
         <div class="row divider"></div>
     </div>
 </body>
