--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="home"><a href="index.html">Harsh Singhal</a></h1>
             </div>
             <div class="col-6">
-                <div class="row p-0 mt-3">
+                <div class="row p-0">
                     <div class="col"></div>
                     <div class="col-auto nav nav_selected mr-4">UX</div>
                     <div class="col-auto nav mr-4">VFX</div>
@@ -33,6 +33,8 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
+        <!-- <div class="row divider desc">This winter I realized that I feel the most joy when I learn a new skill,</div>
+        <div class="row divider desc">and the most content when I practice a skill that I’ve mastered.</div> -->
         <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row">
@@ -54,13 +56,19 @@
                 </div>
             </div>
             <div class="tile col-2">
-                <div class="square thumb pair"></div>
+                <div class="square thumb pair">
+                    <span class="square_desc">Babysitting for Elderly</span>
+                </div>
             </div>
             <div class="tile col-2">
-                <div class="square thumb grabngo"></div>
+                <div class="square thumb grabngo">
+                    <span class="square_desc">College Food Delivery</span>
+                </div>
             </div>
             <div class="tile col-2">
-                <div class="square thumb vibes"></div>
+                <div class="square thumb vibes">
+                    <span class="square_desc">Money Management for Millennials</span>
+                </div>
             </div>
         </div>
         <div class="row divider"></div>
@@ -69,11 +77,15 @@
         <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row divider">
-            <div class="col"></div>
-            <div class="col nav">Programmed using Christian HTML</div>
-            <div class="col"></div>
+            <div class="col" style="text-align: center">
+                <h4 class="nav">Programmed using Christian HTML</h4>
+            </div>
         </div>
-        <div class="row divider"></div>
+        <div class="row divider">
+            <!-- <div class="col" style="text-align: center">
+                <h4 class="nav" style="font-size: 12px; font-weight: 400;">© 2020 - Work of Harshit Singhal</h4>
+            </div> -->
+        </div>
         <div class="row divider"></div>
     </div>
 </body>
