--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <div class="row divider"></div>
         <div class="row divider"></div>
-        <!-- <div class="row divider desc">This winter I realized that I feel the most joy when I learn a new skill,</div>
-        <div class="row divider desc">and the most content when I practice a skill that I’ve mastered.</div> -->
+        <!-- <div class="row divider bio">This winter I realized that I feel the most joy when I learn a new skill,</div>
+        <div class="row divider bio">and the most content when I practice a skill that I’ve mastered.</div> -->
         <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row">
@@ -71,6 +71,26 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="row mt-4">
+            <div class="col desc">
+                Forts for Children <br> of Divorce
+            </div>
+            <div class="col desc">
+                Advanced Security, Intuitive UI
+            </div>
+            <div class="col desc">
+                For the Future <br> Home Buyers
+            </div>
+            <div class="col desc">
+                Babysitting for Elderly
+            </div>
+            <div class="col desc">
+                College Food Delivery
+            </div>
+            <div class="col desc">
+                Money Management <br> for Millennials
+            </div>
+        </div> -->
         <div class="row divider"></div>
         <div class="row divider"></div>
         <div class="row divider"></div>
