--- a/karuna.html
+++ b/karuna.html
@@ -59,6 +59,78 @@
                 </div>
             </div>
         </div>
+        <div id="karuna" class="row">
+            <div class="container">
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col-10">
+                        <span style="
+                        font-weight: 900;
+                        font-size: 56px;
+                        line-height: 64px;
+                        color: #06061F;
+                        display: block;
+                        margin-top:250px;">
+                            The mental health crisis is real. <br>
+                            I know it because I see it everyday at my college campus.
+                        </span>
+                        <span style="
+                        font-weight: 300;
+                        font-size: 42px;
+                        line-height: 48px;
+                        color: #06061F;
+                        display: block;
+                        margin-top:200px;">
+                            Not a semester goes by where we don’t get an email about a fellow student’s suicide. It
+                            prompts us to check-in on our friends again, but this is not the kind of motivation we need.
+                        </span>
+                        <div class="oveview" style="margin-top:250px;">
+                            <span class="title" style="color:#06061F;">
+                                Overview
+                            </span>
+                            <div style="min-height: 50px;border-bottom: 4px solid #06061F;">
+                            </div>
+                            <span class="bodytext" style="color: #06061F; margin-top:100px;">
+                                I was contacted by a few grad students from Stanford Unversity who noticed the same
+                                issue at their campus and were actually trying to solve it (or at least improve the
+                                situation).
+                            </span>
+                            <span class="bodytext" style="color: #06061F; margin-top:75px;">
+                                We were a team of three designers who worked under the guidance and feedback from
+                                Yingzhao Liu (LinkedIn) and Jamal Nichols (Facebook). We were helping young adults
+                                master the habit of showing up for their own wellbeing.
+                            </span>
+                            <span class="bodytext" style="color: #06061F; margin-top:75px;">
+                                My role was to work on information architecture, visual and interaction design. I also
+                                worked closely with the engineers to ensure that the designs were implemented
+                                successfully.
+                            </span>
+                        </div>
+                        <div class="probstmnt" style="margin-top:250px;">
+                            <span class="title" style="color:#06061F;">
+                                Problem Statement
+                            </span>
+                            <div style="min-height: 50px;border-bottom: 4px solid #06061F;">
+                            </div>
+                            <span class="bodytext" style="
+                            font-weight: 300;
+                            font-size: 42px;
+                            line-height: 138.19%;
+                            color: #06061F;
+                            margin-top: 100px;">
+                                How might we empower <span class="bold700">healthy and resilient individuals and
+                                    communities</span> by reinforcing the inextricable <span class="bold700">link
+                                    between self-care and caring <br>for others.</span>
+                            </span>
+                        </div>
+                        <div class="product" style="margin-top:250px;">
+                        </div>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+
+        </div>
 
         <div class="row navbox">
             <div class="container">
@@ -68,8 +140,7 @@
                         <div class="row" style="min-height: 20vh"></div>
                         <div class="row title">Case Studies</div>
                         <div class="row underline"></div>
-                        <div class="row navproject karuna" style="margin-top:60px;"
-                            onclick="location.href='karuna.html#karuna';">
+                        <div class="row navproject projectselected karuna" style="margin-top:60px;">
                             Solving Stanford’s Student Mental Health Crisis.</div>
                         <div class="row navproject numerai" style="margin-top:25px;">
                             Collection of my work for a Crowdsourced Hedge Fund.</div>
