switch to google slides

--- a/index.html
+++ b/index.html
@@ -12,84 +12,11 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-
-        <div class="row header">
-            <div class="container">
-                <div class="row" style="margin-top: 20vh">
-                    <div class="col-12 col-md-6 home mb-5 p-0">
-                        <span class="home m-0">Harsh <br> Singhal</span>
-                    </div>
-                    <div class="col d-none d-md-block  mt-3" style="border-top: 3px solid white"></div>
-                    <div class="col-auto d-none d-md-block mt-2 ml-5">
-                        <div class="row justify-content-end">
-                            <span class="title" style="text-align: right;">
-                                Designer<br>Developer<br>Artist
-                            </span>
-                        </div>
-                        <div class="row mt-5" style="border-right: 3px solid white; min-height: 120%"></div>
-                    </div>
-                </div>
-                <div class="row d-sm-none justify-content-center mb-5">
-                    <span style="text-align: center; color: white; font-size:25px; font-weight: 100">
-                        DESIGNER<br>DEVELOPER<br>ARTIST
-                    </span>
-                </div>
-                <div class="row d-none d-sm-block d-md-none mb-5">
-                    <span style="color: white; font-size:25px; font-weight: 100">
-                        DESIGNER. DEVELOPER. ARTIST.
-                    </span>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-xl-6 justify-content-between">
-                        <div class="row mb-5 justify-content-center justify-content-sm-start">
-                            <div class="col-7 col-sm-auto button resume"
-                                onclick="location.href='ResumeHarsh_01-24-20.pdf';">
-                                <span>Resume</span></div>
-                            <div class="d-none d-sm-block" style="width: 13%"></div>
-                            <div class="col-7 d-sm-none" style="min-height: 20px"></div>
-                            <div class="col-7 col-sm-auto button connect"
-                                onclick="location.href='https://www.linkedin.com/in/helloharsh';">
-                                <span>Connect</span></div>
-                        </div>
-                        <div class="row d-none d-md-block tagline pt-5" style="margin-bottom:150px;">
-                            Currently searching for the next challenge.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row navbox">
-            <div class="container">
-                <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-10">
-                        <div class="row" style="min-height: 20vh"></div>
-                        <div class="row title">Case Studies</div>
-                        <div class="row underline"></div>
-                        <div class="row navproject karuna" style="margin-top:60px;"
-                            onclick="location.href='karuna.html#karuna';">
-                            Solving Stanford’s Student Mental Health Crisis.</div>
-                        <div class="row navproject numerai" style="margin-top:25px;">
-                            Collection of my work for a Crowdsourced Hedge Fund.</div>
-                        <div class="row navproject connect" style="margin-top:25px; opacity:20%; cursor: copy;"
-                            onclick="location.href='https://www.linkedin.com/in/helloharsh';">
-                            Your Project.</div>
-                        <div class="row title justify-content-center justify-content-md-between"
-                            style="margin:200px 0px;">
-                            <span class="navlink" onclick="location.href='https://www.harsh.work/vfx';">Visual
-                                Effects</span><br><br>
-                            <span class="navlink"
-                                onclick="location.href='https://www.harsh.work/traditional';">Traditional Art</span>
-                        </div>
-                        <div class="row construction">*site under construction*</div>
-                    </div>
-                    <div class="col-1"></div>
-                </div>
-            </div>
-        </div>
-
+    <div>
+        <iframe
+            src="https://docs.google.com/presentation/d/e/2PACX-1vTNaiwj-QF2JT70p_RktVrdRSGbHyb0EqQPgt4cDf9_CpwfeceeDhExIlvA1wnpWJ0Ycf5MDJH00bzM/embed?start=false&loop=false&delayms=15000"
+            frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true"
+            webkitallowfullscreen="true"></iframe>
     </div>
 </body>
 
